// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`export-csv Renders \`export-csv\` with custom props 1`] = `
<widget-settings-item-stub
  title="Export CSV"
>
  <div
    class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Separator
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              comma
            </div>
            <input
              aria-label="Separator"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label v-label--active theme--light"
            style="left: 0px; position: absolute;"
          >
            Datetime format
          </label>
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              2021-01-02T15:04:05+0200
            </div>
            <input
              aria-label="Datetime format"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="layout column"
  >
    <h4
      class="subheading my-4"
    >
      Export column names
    </h4>
    <c-columns-with-template-field-stub
      label="Export column names"
      templates=""
      type="alarm"
      value="[object Object]"
    />
  </div>
</widget-settings-item-stub>
`;

exports[`export-csv Renders \`export-csv\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              comma
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              semicolon
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              tab
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              space
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`export-csv Renders \`export-csv\` with custom props 3`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              2021-01-02T15:04:05
            </div>
          </div>
        </a>
      </div>
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              2021-01-02T15:04:05+0200
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              02 Jan 2021 15:04
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              02 Jan 2021 15:04 CEST
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Mon, 02 Jan 2021 15:04:05 CEST
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`export-csv Renders \`export-csv\` with default props 1`] = `
<widget-settings-item-stub
  title="Export CSV"
>
  <div
    class="v-input v-text-field v-select theme--light"
    role="combobox"
  >
    <div
      class="v-input__control"
    >
      <div
        class="v-input__slot"
      >
        <div
          class="v-select__slot"
        >
          <label
            aria-hidden="true"
            class="v-label theme--light"
            style="left: 0px; position: absolute;"
          >
            Separator
          </label>
          <div
            class="v-select__selections"
          >
            <input
              aria-label="Separator"
              aria-readonly="false"
              autocomplete="on"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
        </div>
        <div
          class="v-menu"
        />
      </div>
      <div
        class="v-text-field__details"
      >
        <div
          class="v-messages theme--light"
        >
          <div
            class="v-messages__wrapper"
          />
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div
    class="layout column"
  >
    <h4
      class="subheading my-4"
    >
      Export column names
    </h4>
    <c-columns-with-template-field-stub
      label="Export column names"
      templates=""
      type="alarm"
    />
  </div>
</widget-settings-item-stub>
`;

exports[`export-csv Renders \`export-csv\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              comma
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              semicolon
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              tab
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              space
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
